--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "qrcode-terminal": "^0.12.0",
+    "query-string": "^9.0.0",
     "whatsapp-web.js": "^1.23.0"
   }
 }
